2013-02-09  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/dfpu/floord128.c: New file: floord128 optimized
	implementation for PowerPC.
	* sysdeps/powerpc/dfpu/floord32.c: New file: floord64 optimized
	implementation for PowerPC.
	* sysdeps/powerpc/dfpu/floord64.c: New file: floord32 optimized
	implementation for PowerPC.

2013-02-09  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/dfpu/truncd128.c: New file: truncd128 optimized
	implementation for PowerPC.
	* sysdeps/powerpc/dfpu/truncd32.c: New file: truncd64 optimized
	implementation for PowerPC.
	* sysdeps/powerpc/dfpu/truncd64.c: New file: truncd32 optimized
	implementation for PowerPC.

2013-02-09  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/dfpu/ceild128.c: New file: ceild128 optimized
	implementation for PowerPC.
	* sysdeps/powerpc/dfpu/ceild32.c: New file: ceild64 optimized
	implementation for PowerPC.
	* sysdeps/powerpc/dfpu/ceild64.c: New file: ceild32 optimized
	implementation for PowerPC.

2013-02-09  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* tests/scaffold.c (_ICS_P): Use _VC_P_CPP macro instead of _VC_P.
	(_VC_P): Add isnan test for the inputs.
	(_VC_P_CPP): New macro: value Compare with Position for C++ types.
	* tests/test-rounding.c: New file: test for ceil, floor, nearbyint,
	round, and trunc.
	* Makefile.in: Add test-rounding.

2013-02-08  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* ieee754r/acosd32.c: Remove _IEEE_LIBDFP and _LIB_VERSION defines
	check.
	* ieee754r/acoshd32.c: Likewise.
	* ieee754r/asind32.c: Likewise.
	* ieee754r/atanhd32.c: Likewise.
	* ieee754r/cosd32.c: Likewise.
	* ieee754r/coshd32.c: Likewise.
	* ieee754r/exp2d32.c: Likewise.
	* ieee754r/expd32.c: Likewise.
	* ieee754r/expm1d32.c: Likewise.
	* ieee754r/fdimd32.c: Likewise.
	* ieee754r/fmad32.c: Likewise.
	* ieee754r/fmodd32.c: Likewise.
	* ieee754r/hypotd32.c: Likewise.
	* ieee754r/ldexpd32.c: Likewise.